coral-component-list/src/styles/index.styl
/**
 * Copyright 2019 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

@require '@adobe/spectrum-css/dist/components/menu/index.css';
@require '@adobe/spectrum-css/dist/components/menu/index-diff.css';
@require '@adobe/spectrum-css/dist/components/menu/multiStops/light.css';
@require '@adobe/spectrum-css/dist/components/menu/multiStops/lightest.css';
@require '@adobe/spectrum-css/dist/components/menu/multiStops/dark.css';
@require '@adobe/spectrum-css/dist/components/menu/multiStops/darkest.css';

@require '../../../coral-theme-spectrum/src/styles/vars.css';

// @compat
.coral-List-item + .coral-List-item {
  margin-top: 6px;
}

// @compat
.coral-List {
  margin: 0;
}

// @compat
.coral-List--minimal {
  list-style: none;
  padding: 0;

  > .coral-List-item {
    padding: 0;
    margin: 0;
  }
}

// @compat
.coral-List--condensed {
  list-style: none;
  padding: 0;
  margin: 0;

  > .coral-List-item {
    display: inline-block;
    margin-right: 4px;

    &:after {
      content: ",";
    }

    &:nth-last-of-type(1) {
      &:after {
        content: "";
      }
    }
  }
}

// @compat
._coral-Menu {
  display: block;
}

._coral-ButtonList-item {
  text-align: left;
  width: 100%;
  border-top: 0;
  border-bottom: 0;
  border-right: 0;
}

._coral-AnchorList-item {
  text-decoration: none;
}

._coral-Menu-divider {
  display: list-item;
}

// @compat
._coral-SelectList-group:before {
  display: block;
  margin: var(--spectrum-medium-global-dimension-size-75) 0 0 0;
  padding: 0 var(--spectrum-medium-selectlist-padding-right) 0 var(--spectrum-medium-selectlist-padding-left);
  font-size: var(--spectrum-medium-subheading-text-size);
  font-weight: var(--spectrum-medium-selectlist-option-text-font-weight);
  line-height: 20px;
  text-transform: var(--spectrum-medium-subheading-text-transform);
  letter-spacing: var(--spectrum-medium-subheading-text-letter-spacing);
  content: attr(label);
}

._coral-SelectList-loading {
  position: relative;
  height: var(--spectrum-medium-circleloader-medium-height);
}

@require 'light';
@require 'lightest';
@require 'dark';
@require 'darkest';

